--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </a>
         <a
           target="blank"
-          href="https://outlook.live.com/mail/inbox"
+          href="https://mail.google.com"
           class="buttonLink__link card buttonLink__link-2"
         >
           <i class="buttonLink__icon" data-feather="mail"></i>
@@ -72,13 +72,13 @@
         </a>
         <a
           target="blank"
-          href="https://flipboard.com/"
+          href="https://www.reuters.com/"
           class="buttonLink__link card buttonLink__link-4"
         >
           <i class="buttonLink__icon" data-feather="bookmark"></i>
         </a>
         <a
-          href="https://columns.app"
+          href="https://docs.google.com/document/u/0/"
           target="blank"
           class="buttonLink__link card buttonLink__link-5"
         >
