--- a/index.html
+++ b/index.html
@@ -99,46 +99,28 @@
         <i class="list__head" data-feather="music"></i>
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://open.spotify.com/"
           class="list__link"
-          >Inspirational</a
-        >
-        <a
-          target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-          class="list__link"
-          >Classic</a
-        >
-        <a
-          target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-          class="list__link"
-          >Oldies</a
-        >
-        <a
-          target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-          class="list__link"
-          >Rock</a
+          >Spotify</a
         >
       </div>
 
       <div class="card list list__2">
         <i class="list__head" data-feather="coffee"></i>
-        <a href="https://www.linkedin.com" target="blank" class="list__link"
-          >LinkedIn</a
+        <a href="https://discord.com" target="blank" class="list__link"
+          >Discord</a
         >
-        <a href="https://dribbble.com/" target="blank" class="list__link"
-          >Dribble</a
+        <a href="https://twitter.com/theragex" target="blank" class="list__link"
+          >Twitter</a
         >
-        <a href="https://www.udemy.com/" target="blank" class="list__link"
-          >Udemy</a
+        <a href="https://karachan.org/b/catalog.html" target="blank" class="list__link"
+          >Kura</a
         >
         <a
-          href="https://www.figma.com/files/recent"
+          href="https://pl.vichan.net/b/catalog.html"
           target="blank"
           class="list__link"
-          >Figma</a
+          >Vi</a
         >
       </div>
     </div>
