--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <a href="https://twitter.com/theragex" target="blank" class="list__link"
           >Twitter</a
         >
-        <a href="https://karachan.org/b/catalog.html" target="blank" class="list__link"
+        <a href="https://karachan.org/b/" target="blank" class="list__link"
           >Kura</a
         >
         <a
