--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 
       <div class="card list list__2">
         <i class="list__head" data-feather="coffee"></i>
-        <a href="https://discord.com" target="blank" class="list__link"
+        <a href="https://discord.com/channels/681869614740799505/821441298237358130" target="blank" class="list__link"
           >Discord</a
         >
         <a href="https://twitter.com/theragex" target="blank" class="list__link"
           >Twitter</a
         >
-        <a href="https://karachan.org/b/" target="blank" class="list__link"
+        <a href="https://karachan.org/b/catalog.html" target="blank" class="list__link"
           >Kura</a
         >
         <a
